--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="streamless"
+      name="streamlss"
       content="Find your next movie or TV show"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>streamless | movies + tv</title>
+    <title>streamlss | movies + tv</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
